force-app/main/default/objects/Customer_Information__e/Customer_Information__e.object-meta.xml
<CustomObject>
    <label>Customer Information</label>
    <pluralLabel>Customer Information</pluralLabel>
</CustomObject>