force-app/main/default/objects/Customer_Information__e/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <length>90</length>
    <type>Text</type>
</CustomField>