force-app/main/default/objects/Customer_Information__e/fields/Customer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_First_Name__c</fullName>
    <label>Customer First Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>