force-app/main/default/objects/Customer_Information__e/fields/Customer_last_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_last_Name__c</fullName>
    <label>Customer last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>