force-app/main/default/objects/Customer_Information__e/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <length>90</length>
    <type>Text</type>
</CustomField>